--- a/assets/sass/general.css
+++ b/assets/sass/general.css
@@ -283,7 +283,16 @@ header .navbar-nav {
   border-radius: 1rem;
   padding-block: 0rem;
   padding-inline: 1.5rem;
-  gap: 2rem;
+}
+@media (min-width: 992px) {
+  header .navbar-nav {
+    gap: 2rem;
+  }
+}
+@media (max-width: 991.98px) {
+  header .navbar-nav {
+    gap: 1rem;
+  }
 }
 header .navbar-nav a {
   text-transform: capitalize;
@@ -385,6 +394,7 @@ header .navbar-collapse .navbar-nav {
 }
 @media (max-width: 991.98px) {
   header .navbar-collapse .navbar-nav {
+    padding-block: 1.5rem;
     border: 1px solid #E3E5E8;
     box-shadow: 0px 8px 8px -4px rgba(16, 24, 40, 0.031372549), 0px 20px 24px -4px rgba(16, 24, 40, 0.0784313725);
   }
