--- a/assets/sass/general.scss
+++ b/assets/sass/general.scss
@@ -249,7 +249,13 @@ header {
         border-radius: rem(16);
         padding-block: rem(0);
         padding-inline: rem(24);
-        gap: 2rem;
+        
+        @media (min-width: 992px){
+            gap: 2rem;
+        }
+        @media (max-width: 991.98px){
+            gap: 1rem;
+        }
 
         a {
             text-transform: capitalize;
@@ -380,6 +386,7 @@ header {
             background: #fff;
 
             @media (max-width: 991.98px) {
+                padding-block: rem(24);
                 border: 1px solid #E3E5E8;
                 box-shadow: 0px 8px 8px -4px #10182808,
                     0px 20px 24px -4px #10182814;
