--- a/assets/sass/general.scss
+++ b/assets/sass/general.scss
@@ -474,8 +474,12 @@ header {
   
 }
 .mySwiper.logos::before {
-    left: 0;
+    inset-inline-start: 0;
     background: linear-gradient(to right, #fff 0%, transparent 100%);
+}
+.mySwiper.logos::after{
+    inset-inline-end: 0;
+    background: linear-gradient(to left, #fff 0%, transparent 100%);
 }
 .mySwiper.logos::before, .mySwiper.logos::after {
     content: "";
@@ -998,7 +1002,7 @@ header {
             transition: transform 0.4s ease;
             &:hover{
                 img{
- transform: scale(1.08); 
+                    transform: scale(1.08); 
                 }
               
             }
