--- a/assets/sass/general.scss
+++ b/assets/sass/general.scss
@@ -143,7 +143,16 @@ input {
     box-shadow: unset !important;
     outline: 0 !important;
 }
-
+@layer theme {
+    :host,:root {
+        --breakpoint-3xl: 108rem;
+    }
+}
+.container-fluid{
+    &.max-w-\(--breakpoint-3xl\) {
+        max-width: var(--breakpoint-3xl)
+    }
+}
 /*-----------------------
     Global Styles
 -------------------------*/
@@ -1122,6 +1131,9 @@ header {
         }
 
         .item {
+            img{
+                margin-top: 2.5px;
+            }
             &:not(:last-child) {
                 margin-bottom: 1rem;
             }
@@ -1257,6 +1269,7 @@ header {
             font-family: $font-family-SemiBold;
 
             .job-title {
+                margin-top: 2px;
                 font-size: rem(14);
                 color: var(--mid-gray);
                 font-family: $font-family-medium;
